<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tf_pose_estimation_3d</name>
  <version>0.0.1</version>
  
  <description>Node to convert tf_pose_estimation pixels in 3D points</description>

  <maintainer email="jonatan.gines@urjc.es">jginesclavero</maintainer>
 
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf_pose_estimation_msgs</depend>
  <depend>gb_perception_utils</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
